Subscriber table, subscribe user on signup, edit database

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,3 +6,6 @@ en:
       subscribe:
         blank_email: Missing email
         email_invalid: Invalid email
+        already_subscribed: This email is already subscribed to our newsletter
+      signup:
+        subscribed_label: Subscribe to our news
